k8s/failureManagerDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: failuremanager
spec:
  selector:
    matchLabels:
      app: failuremanager
  template:
    metadata:
      labels:
        app: failuremanager
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5002"     # Our application port. Prometheus will listen to it.    
    spec:
#      priorityClassName: high-priority
      volumes:
        - name: shared-files
          emptyDir: {}
        - name: nginx-config-volume
          configMap:
            name: nginx-config 
      hostNetwork: true
      dnsPolicy: ClusterFirst               
      containers:        
        - image: californibrs/failuremanager
          name: failuremanager
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
