k8s/failureMonitorService.yaml
apiVersion: v1
kind: Service
metadata:
  name: failuremonitor
spec:
  type: LoadBalancer
  selector:
    app: failuremonitor
  ports:
  - port: 5001 # port from application
