k8s/failuremanager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: failuremanager
spec:
  selector:
    matchLabels:
      app: failuremanager
  template:
    metadata:
      labels:
        app: failuremanager
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5002"     # Our application port. Prometheus will listen to it.    
    spec:
#      priorityClassName: high-priority
      volumes:
        - name: shared-files
          emptyDir: {}
        - name: nginx-config-volume
          configMap:
            name: nginx-config 
      hostNetwork: true
      dnsPolicy: ClusterFirst               
      containers:        
        - image: californibrs/failuremanager
          name: failuremanager
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: failuremanager
spec:
  type: LoadBalancer
  selector:
    app: failuremanager
  ports:
  - port: 5002 # port from application

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: failuremonitor
spec:
  selector:
    matchLabels:
      app: failuremonitor
  template:
    metadata:
      labels:
        app: failuremonitor
    spec:
#      priorityClassName: high-priority
      serviceAccountName: kubow-user
      containers:
      - name: failuremonitor
        image: californibrs/failuremonitor
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: failuremonitor
spec:
  type: LoadBalancer
  selector:
    app: failuremonitor
  ports:
  - port: 5001 # port from application


---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: failuremanager
spec:
  controller: nginx-ingress.failure.svc/api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: failuremanager-ingress
#    annotations:
#    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: failuremanager
  rules:
  - http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: failuremanager
            port:
              number: 5002
      - path: /insufficientcpu
        pathType: Prefix
        backend:
          service:
            name: failuremanager
            port:
              number: 5002
